--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,15 @@
-/* Зовнішні стилі */
+/* Селектор тегу (типу) */
 h1 {
     color: blue;
+}
+
+/* Селектор класу */
+.annotation {
+    font-size: 20px;
+}
+
+/* Селектор ідетифікатора */
+
+#subscribe-btn {
+    color: red;
 }
