--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ p {
 
 
 
-a {
+/* a {
     width: 100px;
     height: 50px;
     border: 1px solid green;
@@ -25,18 +25,20 @@ a {
 
     display: inline-block;
 
+} */
+
+
+
+
+
+
+
+
+
+
+ul {
+    text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -45,6 +47,13 @@ a {
 a {
     color: inherit;
     text-decoration: none;
+    border: 1px solid blue;
+    padding: 15px 25px;
+    margin: 0 20px;
+    width: 70px;
+    text-align: center;
+    display: inline-block;
+    
 }
 
 .nav-link-item {
