--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     /* text-align: right; */
+    margin: 0;
 }
 p {
-    width: 200px;
-    /* height: 300px; */
-    /* background-color: ghostwhite; */
+    width: 100%;
     border: 1px solid red;
     padding: 20px;
-    margin: 10px;
 
     display: inline-block;
-    /* text-align: right; */
-    vertical-align: middle;
 }
 
 
