--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,21 @@
 * {
     box-sizing: border-box;
-}
-
-body {
-    /* text-align: right; */
     margin: 0;
+    padding: 0;
 }
+
+
 p {
-    width: 100%;
-    border: 1px solid red;
-    padding: 20px;
-
+    width: 50%;
+    border: 5px solid red;
     display: inline-block;
+    font-size: 40px;
 }
 
-
+div {
+    font-size: 0;
+    border: 5px solid green;
+}
 
 /* a {
     width: 100px;
@@ -36,15 +37,15 @@ p {
 
 
 
-ul {
+/* ul {
     text-align: center;
-}
+} */
 
 
 
 
 
-a {
+/* a {
     color: inherit;
     text-decoration: none;
     border: 1px solid blue;
@@ -54,8 +55,8 @@ a {
     text-align: center;
     display: inline-block;
     
-}
+} */
 
-.nav-link-item {
+/* nav-link-item {
     display: inline;
-}
+} */ 
