--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,60 +3,14 @@
     margin: 0;
     padding: 0;
 }
-
-
-p {
-    width: 50%;
-    border: 5px solid red;
-    display: inline-block;
-    font-size: 40px;
-}
-
-div {
-    font-size: 0;
-    border: 5px solid green;
-}
-
-/* a {
-    width: 100px;
-    height: 50px;
-    border: 1px solid green;
-    padding: 20px;
-    margin: 10px;
-
-    display: inline-block;
-
-} */
-
-
-
-
-
-
-
-
-
-
-/* ul {
+header {
+    background-image: url("./../imgs/зображення_viber_2024-06-18_18-45-13-574.webp");
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    padding: 50px;
     text-align: center;
-} */
-
-
-
-
-
-/* a {
-    color: inherit;
-    text-decoration: none;
-    border: 1px solid blue;
-    padding: 15px 25px;
-    margin: 0 20px;
-    width: 70px;
-    text-align: center;
-    display: inline-block;
-    
-} */
-
-/* nav-link-item {
-    display: inline;
-} */ 
+}
