--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 header {
-    background-image: url("./../imgs/зображення_viber_2024-06-18_18-45-13-574.webp");
+    background-image: url("./../imgs/bg1.jfif");
     height: 300px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,4 +13,83 @@ header {
     color: white;
     padding: 50px;
     text-align: center;
+}
+
+.btn {
+    margin: 20px;
+    display: inline-block;
+    background-color: black;
+    padding: 20px;
+    color: white;
+    border: 1px solid white;
+}
+
+.a2 {
+    text-align: center;
+    color: white;
+    font-size: 50px;
+}
+
+.a1 {
+    background-color: gray;
+    font-size: 0;
+}
+
+.p1 {
+    font-size: 30px;
+    width: 50%;
+    display: inline-block;
+    border: 3px solid black;
+    vertical-align: text-top;
+    height: 200px;
+    color: white;
+}
+.card-content {
+    font-size: 20px;
+    text-align: center;
+
+}
+img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+
+}
+.card {
+    width: 300px;
+    height: 750px;
+    font-size: 0;
+    display: inline-block;
+}
+li {
+    display: inline-block;
+    width: 300px;
+}
+
+ul {
+    text-align: center;
+    background-color: blanchedalmond;
+}
+
+.c {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+.d2 {
+    font-size: 30px;
+    width: 50%;
+    color: white;
+    display: inline-block;
+    vertical-align: top;
+}
+.footer {
+    font-size: 0;
+    background-color: gray;
+}
+.d1 {
+    font-size: 50px;
+    width: 49%;
+    color: white;
+    display: inline-block;
 }
