Fix bug with cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,16 +50,19 @@ header {
 
 }
 img {
-    width: 300px;
+    width: 200px;
     height: 300px;
     object-fit: cover;
 
 }
 .card {
     width: 300px;
-    height: 750px;
+    height: 600px;
     font-size: 0;
     display: inline-block;
+    padding: 30px;
+    border: 3px solid black;
+    margin: 20px;
 }
 li {
     display: inline-block;
@@ -89,7 +92,7 @@ ul {
 }
 .d1 {
     font-size: 50px;
-    width: 49%;
+    width: 50%;
     color: white;
     display: inline-block;
 }
