--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,8 @@
 body {
-    font-size: 16px
+    font-size: 16px;
+    font-family: Lato;
+    font-style: italic;
+    font-weight: 900;
 }
 p {
    /* text-align: ; */
