--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -2,29 +2,29 @@
   box-sizing: border-box;
 }
 
-.outerBlock {
-  border: 5px solid blue;
-  height: 500px;;
-}
+header {
+  background-color: beige;
+  height: 100vh;
+  padding: 20px;
+  text-align: center;
 
-.interBlock {
-  border: 3px solid red;
-  padding: 10px;
-  font-size: 2rem;
-}
-
-.flexParent {
   display: flex;
-  flex-direction: row;
-  justify-content:space-betweengit;
-  align-items:flex-start ;
-  gap: 10px;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-.flexChild {
+a {
+  text-decoration: none;
+  color: inherit;
+  border: 2px solid burlywood;
+  padding: 30px 20px;
+  border-radius: 40%;
 }
-
-.child1 {
-  /* margin-right: auto; */
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1em;
+}
+p {
+  font-size: 1rem;
+  margin-bottom: 1em;
 }
