--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -2,36 +2,108 @@
   box-sizing: border-box;
 }
 
-header, div, footer {
-  border: 2px solid red;
-}
 body {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   min-height: 100vh;
-  align-items: center;
+  /* align-items: center;
+  justify-content: center; */
+  font-family: sans-serif;
 }
 
-div {
-  max-width: 1000px;
+
+footer,
+header {
   width: 100%;
-  min-width: 350px;
-  display: flex;
-
-
 }
+
+
+
+header {
+  display: flex;
+  text-align: center;
+  color: white;
+  background-image: url(./../imgs/bg.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  justify-content: center;
+}
+
+
+main {
+  width: 100%;
+  border: 2px solid green;
+  color: white;
+  background-color: dimgray;
+}
+
 footer {
   margin-top: auto;
 }
-footer, header {
-  width: 100%;
+
+.headerClass {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50%;
+  flex-wrap: wrap;
 }
-nav, main {
-  border: 2px solid green;
+
+
+
+.iconT {
+  height: 200px;
+  width: 200px;
+  padding-top: 50px;
+  font-size: 5rem;
+  border: 10px solid white;
+  border-radius: 50%;
 }
-nav {
-  width: 20%;
+
+
+
+.headerClass {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50%;
+  flex-wrap: wrap;
 }
-main {
-  width: 80%;
+
+.mainClass {
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+  text-align: center;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+
+h1 {
+  font-size: 2rem;
+}
+.a {
+  width: 33%;
+}
+.b {
+  width: 33%;
+}
+.c {
+  width: 33%;
+}
+
+.fa-solid, .fa-brands {
+  height: 200px;
+  width: 200px;
+  padding-top: 50px;
+  font-size: 5rem;
+}
+.Social {
+  font-size: 2rem;
 }
