--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,98 +1,121 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    background-image: url("./../imgs/bg1.jfif");
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: white;
-    padding: 50px;
-    text-align: center;
+  background-image: url("./../imgs/bg2.png");
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: white;
+  padding: 50px;
+  text-align: center;
 }
 
 .btn {
-    margin: 20px;
-    display: inline-block;
-    background-color: black;
-    padding: 20px;
-    color: white;
-    border: 1px solid white;
+  margin: 20px;
+  display: inline-block;
+  background-color: black;
+  padding: 20px;
+  color: white;
+  border: 1px solid white;
 }
 
-.a2 {
-    text-align: center;
-    color: white;
-    font-size: 50px;
+.webAplicationTitle {
+  text-align: center;
+  color: black;
+  font-size: 3.2rem;
+  margin-bottom: 30px;
 }
 
-.a1 {
-    background-color: gray;
-    font-size: 0;
+.webAplication {
+  background-color: #eaeaea;
+  font-size: 0;
 }
 
-.p1 {
-    font-size: 30px;
-    width: 50%;
-    display: inline-block;
-    border: 3px solid black;
-    vertical-align: text-top;
-    height: 200px;
-    color: white;
+.webAplicationInfo {
+  font-size: 1.8rem;
+  width: 50%;
+  display: inline-block;
+  vertical-align: text-top;
+  height: 200px;
+  color: black;
 }
 .card-content {
-    font-size: 20px;
-    text-align: center;
-
+  font-size: 1,5rem;
+  text-align: center;
 }
-img {
-    width: 200px;
-    height: 300px;
-    object-fit: cover;
+h3 {
+    font-size: 2rem;
+}
 
+img {
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
 }
 .card {
-    width: 300px;
-    height: 600px;
-    font-size: 0;
-    display: inline-block;
-    padding: 30px;
-    border: 3px solid black;
-    margin: 20px;
-}
-li {
-    display: inline-block;
-    width: 300px;
+  width: 300px;
+  height: 600px;
+  font-size: 0;
+  display: inline-block;
+  padding: 30px;
+  border: 3px solid black;
+  margin: 20px;
+  background-color: whitesmoke;
 }
 
-ul {
-    text-align: center;
-    background-color: blanchedalmond;
+article {
+  text-align: center;
+  background-color: #333;
+}
+.pgTitle {
+  font-size: 3.2rem;
+}
+.digitalNeedsTitle {
+  margin: 20px;
+  color: #333;
+  text-align: center;
+  font-size: xx-large;
+  font-size: 2rem;
 }
 
-.c {
-    background-color: black;
-    color: white;
-    text-align: center;
+.digitalNeedsText {
+  margin: 20px;
+  color: #333;
+  text-align: center;
+  font-size: 1.3rem;
 }
-.d2 {
-    font-size: 30px;
-    width: 50%;
-    color: white;
-    display: inline-block;
-    vertical-align: top;
+.company {
+  font-size: 1.9rem;
+  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #333;
+  padding: 50px;
+  
 }
-.footer {
-    font-size: 0;
-    background-color: gray;
+.footerClass {
+  display: inline;
+  color: whitesmoke;
+  font-size: 0;
 }
-.d1 {
-    font-size: 50px;
-    width: 50%;
-    color: white;
-    display: inline-block;
+.contacts {
+  font-size: 50px;
+  width: 50%;
+  display: inline-block;
+  background-color: #2690d4;
+  padding: 50px;
+}
+
+.footerText {
+    font-size: 1.9rem;
+}
+.footerTitle {
+    font-size: 3rem;
 }
