--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,20 +1,50 @@
 * {
   box-sizing: border-box;
 }
-
-.parent {
-  border: 5px solid blue;
-  min-height: 150px;
-
-  display: flex;
-  flex-direction: row;
-  /* justify-content: flex-end; */
-  /* align-items: center; */
-  flex-wrap: wrap;
+html {
+  --user-photo-size: 75px;
 }
-.child {
-  border: 5px solid red;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 200px;
+
+.usersList {
+  padding: 15px;
+}
+
+.userListItem{
+box-shadow: 0 0 5px grey;
+padding: 10px;
+display: flex;
+gap: 15px;
+align-items: center;
+}
+
+.userImageWrapper{
+  width: var(--user-photo-size);
+  height: var(--user-photo-size);
+  overflow: hidden;
+  border: 1px solid purple;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.userImageWrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.userName {
+}
+
+.userDiscription {
+
+}
+.trashBtn {
+margin-left: auto;
+border: none;
+background-color: transparent;
+color: rgb(52, 52, 52);
+font-size: 16px;
+}
+
+.trashBtn:hover {
+  cursor: pointer;
 }
