--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,50 +1,28 @@
 * {
   box-sizing: border-box;
 }
-html {
-  --user-photo-size: 75px;
-}
-
-.usersList {
+body {
   padding: 15px;
 }
-
-.userListItem{
+.article {
+max-width: 900px;
+width: 100%;
+min-width: 300px;
+margin: 0 auto;
 box-shadow: 0 0 5px grey;
 padding: 10px;
 display: flex;
+flex-wrap: wrap-reverse;
 gap: 15px;
-align-items: center;
 }
 
-.userImageWrapper{
-  width: var(--user-photo-size);
-  height: var(--user-photo-size);
-  overflow: hidden;
-  border: 1px solid purple;
-  border-radius: 50%;
-  flex-shrink: 0;
-}
-.userImageWrapper img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.imageWrapper, .articleDescription {
+flex-basis: 350px;
+flex-grow: 1;
 }
 
-.userName {
-}
-
-.userDiscription {
-
-}
-.trashBtn {
-margin-left: auto;
-border: none;
-background-color: transparent;
-color: rgb(52, 52, 52);
-font-size: 16px;
-}
-
-.trashBtn:hover {
-  cursor: pointer;
+.imageWrapper img {
+ width: 100%;
+ height: 200px;
+ object-fit: cover;
 }
