--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,40 +1,27 @@
 * {
   box-sizing: border-box;
 }
-html{
-  background-color: black;
-}
 body {
-  min-height: 100vh;
+  font-size: clamp(16px, 4vw, 35px);
+}
+section {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-position: center;
-  position: relative;
-  color: white;
+  gap: 10px;
 }
-.bg {
-  background-image: url(./../imgs/bg.jpg);
-  filter: blur(5px);
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
+p {
+  background-color: green;
+  padding: 20px;
 }
-body:hover h1 {
-  transition: filter 0.2s 0.3s;
-  filter: blur(1px);
+@media screen and (min-width: 401px) and (max-width: 600px) {
+  section{
+    flex-direction: column;
+  }
+  p{
+    padding: 40px;
+  }
 }
-body:hover .bg {
-  filter: blur(0);
-  transition: filter 0.2s 0.3s;
-}
-.btn {
-  transition: transform 0.5s;
-}
-.btn:hover {
-  transform: scale(1.1); 
+@media screen and (max-width: 400px) {
+  p {
+    padding: 30px;
+  }
 }
