--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,29 +1,70 @@
 * {
   box-sizing: border-box;
 }
-.inner-block {
+/* .inner-block {
   border: 3px solid green;
-  width: 50px;
-  height: 50px;
 }
 .outer-container {
   border: 3px solid blue;
-  height: 400px;
 }
-/* .grid-child {
-
-} */
 .grid-parent {
   display: grid;
   grid-template-columns:repeat(3, 100px) ;
-  grid-template-rows:repeat(2, 100px) ;
-  /* grid-auto-flow: row;
-  grid-auto-rows: 75px; */
-
-  align-items: start;
-  justify-items: end;
+  grid-template-rows:repeat(3, 100px) ;
   gap: 10px 20px;
-
-  align-content: center;
-  justify-content: center;
 } 
+.grid-child {
+
+}
+.grid-child:nth-child(1) {
+  grid-column: 1 / 3;
+}
+.grid-child:nth-child(3) {
+  grid-row: 2 / 4;
+} */
+body {
+  display: grid;
+  grid-template-columns: 1fr minmax(200px, 350px) minmax(400px, 600px) 1fr;
+  grid-template-rows: 200px 1fr 150px;
+  gap: 10px;
+
+  min-height: 100vh;
+  border: 3px solid black;
+}
+header {
+  grid-column:1 / 5 ;
+}
+nav {
+  grid-column:2 / 3 ;
+}
+main {
+  grid-column: 3 / 4;
+}
+footer {
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
+}
+header, nav, main, footer{
+  border: 3px solid black;
+}
+@media screen and (max-width: 650px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: 200px 1fr 3fr 100px;
+  }
+  header {
+    grid-column:1 / 2 ;
+  }
+  nav {
+    grid-column:1 / 2 ;
+    grid-row: 2 / 3;
+  }
+  main {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  footer {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+}
